--- a/model_v2_random.ipynb
+++ b/model_v2_random.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 1.7.1\n",
-      "GPU found :)\n"
+      "PyTorch version: 1.6.0\n",
+      "No GPU :(\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +89,12 @@
    "source": [
     "transforms = Compose([Rescale(256), \n",
     "                      RandomCrop(IMAGE_SIZE), \n",
-    "                      ToTensor(), Normalize(),\n",
-    "                      OneHotEncode(tp)])\n",
+    "                      ToTensor(), \n",
+    "                      Normalize(),\n",
+    "                      AddDelimiters(),\n",
+    "                      PadSentence(tp),\n",
+    "                      OneHotEncode(tp)\n",
+    "                     ])\n",
     "\n",
     "train_random_dataset = RandomCaptionDataset('./flickr8k/images/train/', train_annotations_file, transform=transforms)\n",
     "\n",
@@ -99,7 +103,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      "40\n",
+      "(40, 8255)\n"
+     ]
+    }
+   ],
+   "source": [
+    "caption = train_random_dataset[100]['caption']\n",
+    "print(caption)\n",
+    "print(tp.max_len)\n",
+    "print(caption.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,27 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8255\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Embedding(8255, 512)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vocab_size = tp.vocab_size\n",
     "print(vocab_size)\n",
@@ -240,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,20 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nlearning_rate = 0.001\\noptimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\\n\\nnum_epoch = 5\\nstep_count = len(train_random_loader)\\nloss_function = nn.NLLLoss()\\nlosses = list()\\n\\n\\nfor epoch in range(num_epoch):\\n    \\n    epoch_loss = 0\\n    \\n    for i, sample in enumerate(train_random_loader):\\n        \\n        image = sample[\\'image\\'].to(device, dtype=torch.float)\\n        caption = sample[\\'caption\\'].to(device, dtype=torch.long)\\n        \\n        # Reset grad\\n        model.zero_grad()\\n        \\n        # Get the input image embedding \\n        image_embedding = cnn(image).view(-1, batch_size, EMBEDDING_SIZE)\\n        \\n        \\n        # Forward pass for t=-1: image\\n        (hn, cn), probs = model(image_embedding)\\n        \\n        del image_embedding\\n        del image\\n        \\n        target = tp.target_from_vect(caption[:, 0]).to(device)\\n        \\n        # Compute loss for 1st word prediction\\n        loss = loss_function(probs, target)\\n\\n        \\n        # Forward pass for t>=0: n - 1 first words of the sentence\\n        for j, word in enumerate(caption[:, :-1][0]):\\n\\n            # Get index of the word in embedding matrix\\n            idxs = torch.argmax(word)\\n            \\n            # Encode word to hidden space\\n            word_embedding = embedding(idxs).view(1, batch_size, EMBEDDING_SIZE)\\n            \\n            # Feed the rnn\\n            (hn, cn), probs = model(word_embedding, (hn, cn))\\n            \\n            target = tp.target_from_vect(caption[:, j+1]).to(device)\\n            \\n            # Add current word\\'s loss\\n            loss += loss_function(probs, target)\\n            \\n        epoch_loss += loss\\n        \\n        # Compute loss and backprop\\n        loss.backward()\\n        optimizer.step()\\n          \\n        # Debug\\n        if((i+1) % int(step_count/20) == 0):\\n            print(\\n                        f\"Epoch [{epoch + 1}/{num_epoch}]\"\\n                        f\", step [{i + 1}/{step_count}]\"\\n                        f\", loss: {loss.item():.4f}\"\\n                    )\\n            \\n    losses.append(epoch_loss)\\n    \\n    torch.save({\\n            \\'epoch\\': epoch,\\n            \\'model_state_dict\\': model.state_dict(),\\n            \\'optimizer_state_dict\\': optimizer.state_dict(),\\n            \\'loss\\': loss\\n            }, \\'./models/model_random_init0_lstm3_checkpoint\\')\\n'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "learning_rate = 0.001\n",
@@ -350,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,20 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nepochs = list(range(1, num_epoch+1))\\nmean_losses = list(map(lambda x: x/6000, losses))\\nplt.plot(epochs, mean_losses)\\nplt.xlabel('Epoch')\\nplt.ylabel('Average loss')\\nplt.grid()\\nplt.savefig('Loss model random v2 training with lr=0.1.png')\\nplt.show()\\n\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "epochs = list(range(1, num_epoch+1))\n",
@@ -396,23 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LSTMCaptioning(\n",
-       "  (lstm): LSTM(512, 512, num_layers=3, dropout=0.5)\n",
-       "  (hidden2out): Linear(in_features=512, out_features=8255, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load model for evaluation\n",
     "trained_model = LSTMCaptioning(input_size, hidden_size, vocab_size, num_layers)\n",
@@ -422,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,39 +434,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['<start> a a a a a a a a a a a a a a a a a a a',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Black',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a The',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Child',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Bride',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Man',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Three',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Boy',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Young',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a Several',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A a',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A Black',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A The',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A Child',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A Bride',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A A a',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A A Black',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A A The',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A A A a',\n",
-       " '<start> a a a a a a a a a a a a a a a a a a A A A A a']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "captions"
    ]
@@ -506,19 +454,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<start> A boy doing a handstand on the beach . <stop>\n",
-      "<start> a a a a a a a a a a a a a a a a a a A a\n",
-      "6.964541799727335\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sacrebleu\n",
     "target = caption\n",
@@ -547,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
